--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,11 @@
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
+
+    <div class="bar bar-header bar-light">
+        <h1 style="color: #831318;" class="title">Agenda Culturar y Tur&iacute;stica</h1>
+    </div>
+
     <ion-nav-view></ion-nav-view>
 
     <!-- build:js scripts/vendor.js -->
