--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,7 @@
     <script src="lib/ionic/release/js/ionic-angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/squel/index.js"></script>
+    <script src="lib/bindonce/index.js"></script>
     <script src="lib/ng-cordova-mocks/index.js"></script>
     <script src="lib/angular-mocks/angular-mocks.js"></script>
     <script src="lib/databasePopulator/index.js"></script>
