--- a/www/index.html
+++ b/www/index.html
@@ -46,18 +46,19 @@
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/ionic/release/js/ionic.js"></script>
     <script src="lib/ionic/release/js/ionic-angular.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
+    <script src="lib/ngCordovaCustom/index.js"></script>
     <script src="lib/squel/index.js"></script>
     <script src="lib/bindonce/index.js"></script>
-    <script src="lib/ng-cordova-mocks/index.js"></script>
-    <script src="lib/angular-mocks/angular-mocks.js"></script>
-    <script src="lib/databasePopulator/index.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
     <!-- cordova script (this will be a 404 during development) -->
 
     <script src="js/components/events.js"></script>
+    <script src="js/components/my-events.js"></script>
+    <script src="js/components/event-info.js"></script>
 
     <script src="js/components/admin/admin.js"></script>
     <script src="js/components/admin/db-populate.js"></script>
